fix: update font size for first paragraph in project items for better visibility

--- a/src/app/main-content/featured-projects/featured-projects.component.scss
+++ b/src/app/main-content/featured-projects/featured-projects.component.scss
@@ -1281,9 +1281,12 @@
     %project-item {
       height: 70px;
 
+      p:first-child {
+        font-size: 18px;
+      }
+  
       p {
         padding: 12px;
-        // font-size: 14px;
       }
     }
   }
